Fixing height of elements overflowing

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -20,7 +20,7 @@ body {
 main {
   display: flex;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
 
   backdrop-filter: brightness(0.7) blur(10px) grayscale(0.3);
 
@@ -41,7 +41,7 @@ main {
 .container {
   width: 75vw;
   max-width: 1260px;
-  height: calc(100% - 80px);
+  min-height: calc(100% - 80px);
 
   margin: 0 auto;
   padding: 32px 16px;
